// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container allows additional classes to be passed through 1`] = `
.c0 {
  position: fixed;
  top: 7.6rem;
  right: 0;
  overflow: hidden;
  z-index: 2147483647;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  width: 100%;
  margin: auto;
  padding-left: 1.6rem;
  padding-right: 1.6rem;
  max-width: 120rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
  </div>
  <div
    class="c2 test-class"
  />
</div>
`;

exports[`Container has a container and fixed class by default 1`] = `
.c0 {
  position: fixed;
  top: 7.6rem;
  right: 0;
  overflow: hidden;
  z-index: 2147483647;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  width: 100%;
  margin: auto;
  padding-left: 1.6rem;
  padding-right: 1.6rem;
  max-width: 120rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
  </div>
  <div
    class="c2"
  />
</div>
`;

exports[`Container renders children 1`] = `
.c0 {
  position: fixed;
  top: 7.6rem;
  right: 0;
  overflow: hidden;
  z-index: 2147483647;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  width: 100%;
  margin: auto;
  padding-left: 1.6rem;
  padding-right: 1.6rem;
  max-width: 120rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
  </div>
  <div
    class="c2"
  >
    <div
      class="child-content"
    >
      test
    </div>
  </div>
</div>
`;

exports[`Container renders correctly without props 1`] = `
.c0 {
  position: fixed;
  top: 7.6rem;
  right: 0;
  overflow: hidden;
  z-index: 2147483647;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  width: 100%;
  margin: auto;
  padding-left: 1.6rem;
  padding-right: 1.6rem;
  max-width: 120rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
  </div>
  <div
    class="c2"
  />
</div>
`;
